# loader

./: LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
loader/: api_key.json  io.py  loader.py
src/config/: user_agents.json
src/loader/: loader.py
tests/: context.py  test_loader.py
