[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "loader"
version = "0.0.1"
authors = [
    {name="Pascal Müller", email="mup0117@gmail.com"}
]
description = "Loader for HTML tables"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
    "bs4",
    "random"
]

[project.urls]
"Homepage" = "https://github.com/codePascal/loader"
"Bug Tracker" = "https://github.com/codePascal/loader/issues"